tests/should_fail/terminates/trait_def_and_impl_disagree.stderr
error: Expected `h` to be `#[check(ghost)]` as specified by the trait declaration
  --> trait_def_and_impl_disagree.rs:22:5
   |
22 |     fn h() {}
   |     ^^^^^^

error: Expected `g` to be `#[check(ghost)]` as specified by the trait declaration
  --> trait_def_and_impl_disagree.rs:20:5
   |
20 |     fn g() {}
   |     ^^^^^^

error: Expected `f` to be `#[check(terminates)]` as specified by the trait declaration
  --> trait_def_and_impl_disagree.rs:17:5
   |
17 |     fn f() {}
   |     ^^^^^^

error: aborting due to 3 previous errors

